--- a/src/RouteUrlRedirector/project.json
+++ b/src/RouteUrlRedirector/project.json
@@ -6,17 +6,6 @@
   },
 
   "frameworks": {
-    "netstandard1.6": {},
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.4"
-      ],
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.0"
-        }
-      }
-    }
+    "netstandard1.6": {}
   }
 }
