Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ ClientBin/
 *.[Pp]ublish.xml
 *.pfx
 *.publishsettings
+.vs
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -154,3 +155,7 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# DNX
+artifacts/
+project.lock.json
